[package]
name = "fing"
version = "0.1.0"
edition = "2021"

[workspace.package]
edition = "2021"

[workspace]
members = [
  "common"
]

[[bin]]
name = "fing-client"
path = "src/bin/fing-client.rs"

[[bin]]
name = "fing-primary"
path = "src/bin/fing-primary.rs"

[[bin]]
name = "fing-node"
path = "src/bin/fing-node.rs"

[workspace.dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
common = { path = "common" }
futures = "0.3.24"
quinn = "0.8.5"
quinn-proto = "0.8.4"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.20.6", features = ["quic", "dangerous_configuration"] }
serde = { version = "1.0.145", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.1"
webpki = "0.22.0"

[dependencies]
anyhow = { workspace = true}
bytes = { workspace = true}
clap = { workspace = true}
common = { workspace = true }
tokio = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
url = { workspace = true}