[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lab = { path = "../lab" }
tribbler = { path = "../tribbler" }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
clap = { version = "4.1", features = ["derive"] }
actix-web = "4.3"
actix-files = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
env_logger = "0.10"
shlex = "1.1"
rand = "0.8"


[[bin]]
name = "kv-server"
path = "src/kv_server.rs"

[[bin]]
name = "kv-client"
path = "src/kv_client.rs"

[[bin]]
name = "trib-front"
path = "src/trib_front.rs"

[[bin]]
name = "bins-mkcfg"
path = "src/bins_mkcfg.rs"

[[bin]]
name = "bins-back"
path = "src/bins_back.rs"

[[bin]]
name = "bins-keep"
path = "src/bins_keep.rs"

[[bin]]
name = "bins-client"
path = "src/bins_client.rs"

[[bin]]
name = "lab3-keeper"
path = "src/lab3_keeper.rs"

[[bin]]
name = "lab3-back"
path = "src/lab3_back.rs"
