[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
futures = "0.3.24"
quinn = "0.8.5"
quinn-proto = "0.8.4"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.20.6", features = ["quic", "dangerous_configuration"] }
serde = { version = "1.0.145", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.36"
url = "2.3.1"
webpki = "0.22.0"
