[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true}
backoff = { workspace = true}
bincode = { workspace = true}
bytes = { workspace = true}
futures = { workspace = true}
quinn = { workspace = true}
quinn-proto = { workspace = true}
rand = { workspace = true}
rcgen = { workspace = true}
rustls = { workspace = true}
serde = { workspace = true}
structopt = { workspace = true}
thiserror = { workspace = true}
tokio = { workspace = true}
tracing = { workspace = true}
url = { workspace = true}
webpki = { workspace = true}
