[package]
name = "fing_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = { version = "1.2.1", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
common = { path="../common" }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.1"

