[package]
name = "lab"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.63"
log = "0.4"
prost = "0.11"
tribbler = { path = "../tribbler" }
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"

[dev-dependencies]
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.8"
