[package]
name = "tribbler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.63"
log = "0.4"
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "sync", "time", "net", "full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
local-ip-address = "0.5.1"


[build-dependencies]
tonic-build = "0.8"


